@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>dk.sdu.cbse</groupId>
     <artifactId>AsteroidsFX</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>AsteroidsFX</name>
-    <repositories>
-    </repositories>
 
     <modules>
         <module>Core</module>
@@ -19,7 +17,9 @@
         <module>Enemy</module>
         <module>Asteroids</module>
         <module>Collision</module>
+        <module>CommonAsteroids</module>
     </modules>
+
     <properties>
         <java>java</java>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -36,128 +36,32 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
+
     <build>
         <plugins>
+            <!-- Maven Dependency Plugin to Copy JARs to mods-mvn -->
             <plugin>
-                <artifactId>maven-clean-plugin</artifactId>
-                <version>3.2.0</version>
-            </plugin>
-            <plugin>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.10.1</version>
-                <configuration>
-                    <fork>true</fork>
-                </configuration>
-            </plugin>
-            <!-- execute the resulting project -->
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>exec-maven-plugin</artifactId>
-                <version>1.6.0</version>
-                <inherited>false</inherited>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <version>3.0.2</version>
                 <executions>
                     <execution>
+                        <id>copy-dependencies</id>
+                        <phase>install</phase> <!-- Ensure it runs at the correct phase -->
                         <goals>
-                            <goal>exec</goal>
+                            <goal>copy-dependencies</goal>
                         </goals>
+                        <configuration>
+                            <!-- Include the JARs of your modules and dependencies -->
+                            <includeGroupIds>dk.sdu.cbse,org.openjfx</includeGroupIds>
+                            <includeArtifactIds>Core,Common,Player,Bullet,CommonBullet,Enemy,Asteroids,Collision,CommonAsteroids,javafx-controls,javafx-graphics,javafx-base</includeArtifactIds>
+                            <!-- Correct the output directory to be the root directory -->
+                            <outputDirectory>${project.parent.basedir}/mods-mvn</outputDirectory> <!-- Correct root-level directory -->
+                            <useRepositoryLayout>false</useRepositoryLayout> <!-- Ensures proper artifact resolution -->
+                        </configuration>
                     </execution>
                 </executions>
-                <configuration>
-                    <executable>${java}</executable>
-                    <workingDirectory>.</workingDirectory>
-                    <longModulepath>false</longModulepath>
-                    <arguments>
-                        <!--
-                                                On Mac Devices this line should not be commented out
-                                                <argument>-XstartOnFirstThread</argument>
-                        -->
-                        <argument>-Dorg.lwjgl.util.Debug=true</argument>
-                        <argument>-Djava.library.path=libs</argument>
-                        <argument>--module-path=mods-mvn</argument>
-                        <argument>--class-path=libs/*</argument>
-                        <!-- because spark.core is an automatic module and actually required,
-                        monitor.observer.zero would be resolved as well and does not need
-                        to be added explicitly;
-                        I still wanted to do it for clarity, but for some reason that results
-                        in "java.lang.module.FindException: Module monitor.observer.zero not found";
-                        strange... -->
-                        <!--                        <argument>-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=127.0.0.1:8000</argument>                        &ndash;&gt;-->
-                        <argument>--module=Core/dk.sdu.cbse.main.Main</argument>
-                        <argument>--add-modules javafx.graphics</argument>
-                    </arguments>
-                </configuration>
             </plugin>
         </plugins>
     </build>
 
-    <profiles>
-        <profile>
-            <!-- parent project should delete 'mods-mvn' -->
-            <id>parent-project</id>
-            <activation>
-                <file>
-                    <missing>src</missing>
-                </file>
-            </activation>
-            <build>
-                <plugins>
-                    <plugin>
-                        <artifactId>maven-clean-plugin</artifactId>
-                        <version>3.2.0</version>
-                        <configuration>
-                            <filesets>
-                                <fileset>
-                                    <directory>mods-mvn</directory>
-                                </fileset>
-                                <fileset>
-                                    <directory>libs</directory>
-                                </fileset>
-                            </filesets>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-        <profile>
-            <!-- child projects should copy artifact into 'mods-mvn' -->
-            <id>child-project</id>
-            <activation>
-                <file>
-                    <exists>src</exists>
-                </file>
-            </activation>
-
-
-
-
-            <build>
-                <plugins>
-                    <plugin>
-                        <artifactId>maven-dependency-plugin</artifactId>
-                        <version>3.0.2</version>
-                        <executions>
-                            <execution>
-                                <id>copy-installed</id>
-                                <phase>install</phase>
-                                <goals>
-                                    <goal>copy</goal>
-                                </goals>
-                                <configuration>
-                                    <artifactItems>
-                                        <artifactItem>
-                                            <groupId>${project.groupId}</groupId>
-                                            <artifactId>${project.artifactId}</artifactId>
-                                            <version>${project.version}</version>
-                                            <type>jar</type>
-                                        </artifactItem>
-                                    </artifactItems>
-                                    <outputDirectory>../mods-mvn</outputDirectory>
-                                </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-    </profiles>
 </project>
